@@ -12,6 +12,7 @@ Authors@R: c(person("Wei-Chen", "Chen", role = c("aut", "cre"), email =
         person("R Core team", role = "ctb", comment = "some functions are
                 modified from the R source code"))
 Depends: R (>= 3.0.0)
+Imports: R6
 LazyLoad: yes
 LazyData: yes
 Copyright: See files AUTHORS, COPYING, COPYING.LESSER, and MAINTAINERS
