@@ -1,5 +1,7 @@
 # Generated by roxygen2 (4.1.1): do not edit by hand
 
+export(Context)
+export(Socket)
 export(ZMQ.MC)
 export(ZMQ.SO)
 export(ZMQ.SR)
@@ -10,6 +12,7 @@ export(init.context)
 export(init.socket)
 export(receive.socket)
 export(send.socket)
+export(zmq)
 export(zmq.bind)
 export(zmq.close)
 export(zmq.connect)
@@ -23,4 +26,5 @@ export(zmq.setsockopt)
 export(zmq.socket)
 export(zmq.strerror)
 export(zmq.version)
+importFrom(R6,R6Class)
 useDynLib(pbdZMQ, R_zmq_ctx_new, R_zmq_ctx_destroy, R_zmq_msg_init, R_zmq_msg_close, R_zmq_msg_send, R_zmq_msg_recv, R_zmq_send_char, R_zmq_send_raw, R_zmq_recv_char, R_zmq_recv_raw, R_zmq_socket, R_zmq_close, R_zmq_bind, R_zmq_connect, R_zmq_setsockopt, R_zmq_strerror, R_zmq_version, shellexec_wcc)
