@@ -1,0 +1,38 @@
+% Generated by roxygen2 (4.1.1): do not edit by hand
+% Please edit documentation in R/pyzmq_wrapper.r
+\docType{class}
+\name{PyZMQ-like Interface}
+\alias{Context}
+\alias{PyZMQ-like Interface}
+\alias{Socket}
+\alias{pyzmq}
+\alias{zmq}
+\title{R6 ZMQ Interface}
+\format{An \code{\link{R6Class}} generator object}
+\usage{
+Socket
+
+Context
+
+zmq
+}
+\description{
+R6 ZMQ Interface
+}
+\examples{
+\dontrun{
+context = zmq$Context()
+socket = context$socket("ZMQ_REQ")
+socket$connect("tcp://localhost:5555")
+### etc...
+}
+}
+\author{
+Drew Schmidt
+}
+\references{
+Modeled after the PyZMQ interface \url{https://zeromq.github.io/pyzmq/api/zmq.html}
+}
+\keyword{data}
+\keyword{datasets}
+
